alert variant aliases fixed; text now aligned with icon / word-wrapping cleaned up

--- a/alert.scss
+++ b/alert.scss
@@ -74,6 +74,10 @@
 .alert {
 	$alert: &;
 
+    // ensures icon and text appears aligned (also prevents text wrapping underneath icon)
+    display: flex;
+    align-items: center;
+
     // icon
     &__icon {
         font-size: 2rem;
